# prng

./: LICENSE  README.md  prng.cabal  stack.yaml
app/: Main.hs
src/Data/: MTRNG.hs  PRNG.hs
src/Data/PRNG/: ACMWC.hs  MTRNG.hs  MWC.hs  mwc.hs
src/Test/: MTRNG.hs  MWC.hs  Test.hs
test/: Spec.hs
