name:                prng
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tosku/prng#readme
license:             GPL-3
license-file:        LICENSE
author:              Thodoris Papakonstantinou
maintainer:          mail@tpapak.com
copyright:           2017 Thodoris Papakonstantinou
category:            Statistics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.PRNG
                     , Data.PRNG.MTRNG
                     , Test.MTRNG
                     --, Data.PRNG.ACMWC
                     , Data.PRNG.MWC
                     , Test.MWC
                     , Test.Test
  build-depends:       base >= 4.7 && < 5
                     , ansi-terminal >= 0.6.3.1
                     , mtl >= 2.2.1
                     , natural-numbers
                     , random
                     , mersenne-random-pure64 >= 0.2.0.5
                     , vector
                     , lens >= 4.15.1
                     , stm >= 2.4.4.1
                     , Stack >= 0.3.2
                     , template-haskell >= 2.11.1.0
                     , monad-par >= 0.3.4.8
                     , containers >= 0.5.7.1
                     , Unique
                     , unix
                     , async >= 2.1.1
                     , aeson
                     , mwc-random 
                     , erf >= 2.0.0.0
                     , primitive
  default-language:    Haskell2010

executable prng-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  --ghc-options:        -O2 -threaded -rtsopts -with-rtsopts=-N
  ghc-options:         -O2
  build-depends:       prng
                     , base >= 4.7 && < 5
                     , ansi-terminal >= 0.6.3.1
                     , mtl >= 2.2.1
                     , natural-numbers
                     , random
                     , mersenne-random-pure64 >= 0.2.0.5
                     , vector
                     , lens >= 4.15.1
                     , primitive
                     , stm >= 2.4.4.1
                     , Stack >= 0.3.2
                     , template-haskell >= 2.11.1.0
                     , monad-par >= 0.3.4.8
                     , containers >= 0.5.7.1
                     , Unique
                     , unix
                     , async >= 2.1.1
                     , aeson
                     , erf >= 2.0.0.0
                     , criterion
                     , mwc-random 
                     --, AC-Random >= 0.1
  default-language:    Haskell2010

test-suite prng-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ansi-terminal >= 0.6.3.1
                     , mtl >= 2.2.1
                     , random
                     , lens >= 4.15.1
                     , prng
  ghc-options:        -O2 -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tosku/prng
